--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
     <div class="profile-card">
         <a href="https://www.instagram.com/actorleochen/" target="_blank">
-            <img src="/actorleochen.png" alt="actorleochen">
+            <img src="/actorleochen.jpg" alt="actorleochen">
             @actorleochen
         </a>
     </div>
