--- a/index.html
+++ b/index.html
@@ -70,103 +70,103 @@
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/candy88051718/" target="_blank">
-            <img src="/candy88051718.png" alt="candy88051718">
+            <img src="/candy88051718.jpg" alt="candy88051718">
             @candy88051718
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/chanelyu23/" target="_blank">
-            <img src="/chanelyu23.png" alt="chanelyu23">
+            <img src="/chanelyu23.jpg" alt="chanelyu23">
             @chanelyu23
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/dorisss_0624/" target="_blank">
-            <img src="/dorisss_0624.png" alt="dorisss_0624">
+            <img src="/dorisss_0624.jpg" alt="dorisss_0624">
             @dorisss_0624
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/gm_turabbit/" target="_blank">
-            <img src="/gm_turabbit.png" alt="gm_turabbit">
+            <img src="/gm_turabbit.jpg" alt="gm_turabbit">
             @gm_turabbit
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/hi_smallsea/" target="_blank">
-            <img src="/hi_smallsea.png" alt="hi_smallsea">
+            <img src="/hi_smallsea.jpg" alt="hi_smallsea">
             @hi_smallsea
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/larp_hibia/" target="_blank">
-            <img src="/larp_hibia.png" alt="larp_hibia">
+            <img src="/larp_hibia.jpg" alt="larp_hibia">
             @larp_hibia
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/linrcheng_/" target="_blank">
-            <img src="/linrcheng_.png" alt="linrcheng_">
+            <img src="/linrcheng_.jpg" alt="linrcheng_">
             @linrcheng_
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/me_tree00/" target="_blank">
-            <img src="/me_tree00.png" alt="me_tree00">
+            <img src="/me_tree00.jpg" alt="me_tree00">
             @me_tree00
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/minnnp_w/" target="_blank">
-            <img src="/minnnp_w.png" alt="minnnp_w">
+            <img src="/minnnp_w.jpg" alt="minnnp_w">
             @minnnp_w
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/pluto860218/" target="_blank">
-            <img src="/pluto860218.png" alt="pluto860218">
+            <img src="/pluto860218.jpg" alt="pluto860218">
             @pluto860218
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/sandi_zt/" target="_blank">
-            <img src="/sandi_zt.png" alt="sandi_zt">
+            <img src="/sandi_zt.jpg" alt="sandi_zt">
             @sandi_zt
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/tsaiyishiuan/" target="_blank">
-            <img src="/tsaiyishiuan.png" alt="tsaiyishiuan">
+            <img src="/tsaiyishiuan.jpg" alt="tsaiyishiuan">
             @tsaiyishiuan
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/wei_mmmmmm/" target="_blank">
-            <img src="/wei_mmmmmm.png" alt="wei_mmmmmm">
+            <img src="/wei_mmmmmm.jpg" alt="wei_mmmmmm">
             @wei_mmmmmm
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/white_yanjun/" target="_blank">
-            <img src="/white_yanjun.png" alt="white_yanjun">
+            <img src="/white_yanjun.jpg" alt="white_yanjun">
             @white_yanjun
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/yeon.c_/" target="_blank">
-            <img src="/yeon.c_.png" alt="yeon.c_">
+            <img src="/yeon.c_.jpg" alt="yeon.c_">
             @yeon.c_
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/zhuan_red/" target="_blank">
-            <img src="/zhuan_red.png" alt="zhuan_red">
+            <img src="/zhuan_red.jpg" alt="zhuan_red">
             @zhuan_red
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/zzhang_1025/" target="_blank">
-            <img src="/zzhang_1025.png" alt="zzhang_1025">
+            <img src="/zzhang_1025.jpg" alt="zzhang_1025">
             @zzhang_1025
         </a>
     </div>
