--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
 <body>
     <div class="profile-card">
         <a href="https://www.instagram.com/actorleochen/" target="_blank">
-            <img src="/actorleochen.jpg" alt="actorleochen">
+            <img src="https://upload.cc/i1/2024/07/31/BcCZTQ.jpg" alt="actorleochen">
             @actorleochen
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/candy88051718/" target="_blank">
-            <img src="/candy88051718.jpg" alt="candy88051718">
+            <img src="https://upload.cc/i1/2024/07/31/J4ASuZ.jpg" alt="candy88051718">
             @candy88051718
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/chanelyu23/" target="_blank">
-            <img src="/chanelyu23.jpg" alt="chanelyu23">
+            <img src="https://upload.cc/i1/2024/07/31/IDZQac.jpg" alt="chanelyu23">
             @chanelyu23
         </a>
     </div>
