--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
             justify-content: center;
             padding: 20px;
             margin: 0;
+            background-color: #121212; /* 深色背景 */
+            color: #ffffff; /* 白色文字 */
         }
         .profile-card {
-            background-color: #f0f0f0;
+            background-color: #1e1e1e; /* 深色方塊 */
             border-radius: 10px;
             margin: 10px;
             padding: 20px;
@@ -36,13 +38,13 @@
             justify-content: center;
             align-items: center;
             text-decoration: none;
-            color: #333;
+            color: #ffffff; /* 白色文字 */
             font-weight: bold;
         }
         .profile-card img {
             border-radius: 50%;
-            width: 100px;
-            height: 100px;
+            width: 75%; /* 調整圖片佔比 */
+            height: 75%; /* 調整圖片佔比 */
             object-fit: cover;
             margin-bottom: 10px;
         }
@@ -64,109 +66,109 @@
 <body>
     <div class="profile-card">
         <a href="https://www.instagram.com/actorleochen/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/BcCZTQ.jpg" alt="actorleochen">
+            <img src="https://imgur.com/WMRpd5W.jpg" alt="actorleochen">
             @actorleochen
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/candy88051718/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/J4ASuZ.jpg" alt="candy88051718">
+            <img src="https://imgur.com/jxQT0i6.jpg" alt="candy88051718">
             @candy88051718
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/chanelyu23/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/IDZQac.jpg" alt="chanelyu23">
+            <img src="https://imgur.com/52QT482.jpg" alt="chanelyu23">
             @chanelyu23
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/dorisss_0624/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/9HbRPC.jpg" alt="dorisss_0624">
+            <img src="https://imgur.com/7RXc1uj.jpg" alt="dorisss_0624">
             @dorisss_0624
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/gm_turabbit/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/K3LAet.jpg" alt="gm_turabbit">
+            <img src="https://imgur.com/ba8wQCW.jpg" alt="gm_turabbit">
             @gm_turabbit
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/hi_smallsea/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/RtOMZx.jpg" alt="hi_smallsea">
+            <img src="https://imgur.com/QbXFA4V.jpg" alt="hi_smallsea">
             @hi_smallsea
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/larp_hibia/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/qsunED.jpg" alt="larp_hibia">
+            <img src="https://imgur.com/gy9ERZL.jpg" alt="larp_hibia">
             @larp_hibia
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/linrcheng_/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/5wazRp.jpg" alt="linrcheng_">
+            <img src="https://imgur.com/CyW5KZj.jpg" alt="linrcheng_">
             @linrcheng_
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/me_tree00/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/TleM68.jpg" alt="me_tree00">
+            <img src="https://imgur.com/CrHFiGC.jpg" alt="me_tree00">
             @me_tree00
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/minnnp_w/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/etduIZ.jpg" alt="minnnp_w">
+            <img src="https://imgur.com/7Cmehf8.jpg" alt="minnnp_w">
             @minnnp_w
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/pluto860218/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/HJFTdG.jpg" alt="pluto860218">
+            <img src="https://imgur.com/etFRiyJ.jpg" alt="pluto860218">
             @pluto860218
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/sandi_zt/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/hsHdnk.jpg" alt="sandi_zt">
+            <img src="https://imgur.com/z5otSPl.jpg" alt="sandi_zt">
             @sandi_zt
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/tsaiyishiuan/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/puUFxT.jpg" alt="tsaiyishiuan">
+            <img src="https://imgur.com/vxoT9N1.jpg" alt="tsaiyishiuan">
             @tsaiyishiuan
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/wei_mmmmmm/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/0vRa4y.jpg" alt="wei_mmmmmm">
+            <img src="https://imgur.com/Vds4lKC.jpg" alt="wei_mmmmmm">
             @wei_mmmmmm
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/white_yanjun/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/j4T1DU.jpg" alt="white_yanjun">
+            <img src="https://imgur.com/XJmEMNY.jpg" alt="white_yanjun">
             @white_yanjun
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/yeon.c_/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/BKyR9m.jpg" alt="yeon.c_">
+            <img src="https://imgur.com/B4ZxJ18.jpg" alt="yeon.c_">
             @yeon.c_
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/zhuan_red/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/UikjVp.jpg" alt="zhuan_red">
+            <img src="https://imgur.com/eP1RKNJ.jpg" alt="zhuan_red">
             @zhuan_red
         </a>
     </div>
     <div class="profile-card">
         <a href="https://www.instagram.com/zzhang_1025/" target="_blank">
-            <img src="https://upload.cc/i1/2024/07/31/VNrhOC.jpg" alt="zzhang_1025">
+            <img src="https://imgur.com/T9ZkrO1.jpg" alt="zzhang_1025">
             @zzhang_1025
         </a>
     </div>
