--- a/index.html
+++ b/index.html
@@ -3,17 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram Links</title>
+    <title>康斯特學園_演員Instagram</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Noto Sans TC', sans-serif; /* 使用Noto Sans Traditional Chinese字體 */
+            background-color: #121212; /* 深色背景 */
+            color: #ffffff; /* 白色文字 */
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .header {
+            text-align: center;
+            margin-bottom: 20px;
+            padding: 10px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        .header h1 {
+            margin: 0;
+            font-size: 2em;
+            font-weight: 700;
+        }
+        .container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            padding: 20px;
-            margin: 0;
-            background-color: #121212; /* 深色背景 */
-            color: #ffffff; /* 白色文字 */
+            width: 100%;
         }
         .profile-card {
             background-color: #1e1e1e; /* 深色方塊 */
@@ -64,113 +83,118 @@
     </style>
 </head>
 <body>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/actorleochen/" target="_blank">
-            <img src="https://imgur.com/WMRpd5W.jpg" alt="actorleochen">
-            @actorleochen
-        </a>
+    <div class="header">
+        <h1>康斯特學園  演員Instagram</h1>
     </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/candy88051718/" target="_blank">
-            <img src="https://imgur.com/jxQT0i6.jpg" alt="candy88051718">
-            @candy88051718
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/chanelyu23/" target="_blank">
-            <img src="https://imgur.com/52QT482.jpg" alt="chanelyu23">
-            @chanelyu23
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/dorisss_0624/" target="_blank">
-            <img src="https://imgur.com/7RXc1uj.jpg" alt="dorisss_0624">
-            @dorisss_0624
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/gm_turabbit/" target="_blank">
-            <img src="https://imgur.com/ba8wQCW.jpg" alt="gm_turabbit">
-            @gm_turabbit
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/hi_smallsea/" target="_blank">
-            <img src="https://imgur.com/QbXFA4V.jpg" alt="hi_smallsea">
-            @hi_smallsea
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/larp_hibia/" target="_blank">
-            <img src="https://imgur.com/gy9ERZL.jpg" alt="larp_hibia">
-            @larp_hibia
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/linrcheng_/" target="_blank">
-            <img src="https://imgur.com/CyW5KZj.jpg" alt="linrcheng_">
-            @linrcheng_
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/me_tree00/" target="_blank">
-            <img src="https://imgur.com/CrHFiGC.jpg" alt="me_tree00">
-            @me_tree00
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/minnnp_w/" target="_blank">
-            <img src="https://imgur.com/7Cmehf8.jpg" alt="minnnp_w">
-            @minnnp_w
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/pluto860218/" target="_blank">
-            <img src="https://imgur.com/etFRiyJ.jpg" alt="pluto860218">
-            @pluto860218
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/sandi_zt/" target="_blank">
-            <img src="https://imgur.com/z5otSPl.jpg" alt="sandi_zt">
-            @sandi_zt
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/tsaiyishiuan/" target="_blank">
-            <img src="https://imgur.com/vxoT9N1.jpg" alt="tsaiyishiuan">
-            @tsaiyishiuan
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/wei_mmmmmm/" target="_blank">
-            <img src="https://imgur.com/Vds4lKC.jpg" alt="wei_mmmmmm">
-            @wei_mmmmmm
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/white_yanjun/" target="_blank">
-            <img src="https://imgur.com/XJmEMNY.jpg" alt="white_yanjun">
-            @white_yanjun
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/yeon.c_/" target="_blank">
-            <img src="https://imgur.com/B4ZxJ18.jpg" alt="yeon.c_">
-            @yeon.c_
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/zhuan_red/" target="_blank">
-            <img src="https://imgur.com/eP1RKNJ.jpg" alt="zhuan_red">
-            @zhuan_red
-        </a>
-    </div>
-    <div class="profile-card">
-        <a href="https://www.instagram.com/zzhang_1025/" target="_blank">
-            <img src="https://imgur.com/T9ZkrO1.jpg" alt="zzhang_1025">
-            @zzhang_1025
-        </a>
+    <div class="container">
+        <div class="profile-card">
+            <a href="https://www.instagram.com/actorleochen/" target="_blank">
+                <img src="https://imgur.com/WMRpd5W.jpg" alt="actorleochen">
+                @actorleochen
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/candy88051718/" target="_blank">
+                <img src="https://imgur.com/jxQT0i6.jpg" alt="candy88051718">
+                @candy88051718
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/chanelyu23/" target="_blank">
+                <img src="https://imgur.com/52QT482.jpg" alt="chanelyu23">
+                @chanelyu23
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/dorisss_0624/" target="_blank">
+                <img src="https://imgur.com/7RXc1uj.jpg" alt="dorisss_0624">
+                @dorisss_0624
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/gm_turabbit/" target="_blank">
+                <img src="https://imgur.com/ba8wQCW.jpg" alt="gm_turabbit">
+                @gm_turabbit
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/hi_smallsea/" target="_blank">
+                <img src="https://imgur.com/QbXFA4V.jpg" alt="hi_smallsea">
+                @hi_smallsea
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/larp_hibia/" target="_blank">
+                <img src="https://imgur.com/gy9ERZL.jpg" alt="larp_hibia">
+                @larp_hibia
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/linrcheng_/" target="_blank">
+                <img src="https://imgur.com/CyW5KZj.jpg" alt="linrcheng_">
+                @linrcheng_
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/me_tree00/" target="_blank">
+                <img src="https://imgur.com/CrHFiGC.jpg" alt="me_tree00">
+                @me_tree00
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/minnnp_w/" target="_blank">
+                <img src="https://imgur.com/7Cmehf8.jpg" alt="minnnp_w">
+                @minnnp_w
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/pluto860218/" target="_blank">
+                <img src="https://imgur.com/etFRiyJ.jpg" alt="pluto860218">
+                @pluto860218
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/sandi_zt/" target="_blank">
+                <img src="https://imgur.com/z5otSPl.jpg" alt="sandi_zt">
+                @sandi_zt
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/tsaiyishiuan/" target="_blank">
+                <img src="https://imgur.com/vxoT9N1.jpg" alt="tsaiyishiuan">
+                @tsaiyishiuan
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/wei_mmmmmm/" target="_blank">
+                <img src="https://imgur.com/Vds4lKC.jpg" alt="wei_mmmmmm">
+                @wei_mmmmmm
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/white_yanjun/" target="_blank">
+                <img src="https://imgur.com/XJmEMNY.jpg" alt="white_yanjun">
+                @white_yanjun
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/yeon.c_/" target="_blank">
+                <img src="https://imgur.com/B4ZxJ18.jpg" alt="yeon.c_">
+                @yeon.c_
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/zhuan_red/" target="_blank">
+                <img src="https://imgur.com/eP1RKNJ.jpg" alt="zhuan_red">
+                @zhuan_red
+            </a>
+        </div>
+        <div class="profile-card">
+            <a href="https://www.instagram.com/zzhang_1025/" target="_blank">
+                <img src="https://imgur.com/T9ZkrO1.jpg" alt="zzhang_1025">
+                @zzhang_1025
+            </a>
+        </div>
     </div>
 </body>
 </html>
