--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         }
         .header h1 {
             margin: 0;
+            font-size: 3em;
+            font-weight: 700;
+        }
+        .header h2 {
+            margin: 0;
             font-size: 2em;
             font-weight: 700;
         }
@@ -84,7 +89,8 @@
 </head>
 <body>
     <div class="header">
-        <h1>康斯特學園  演員Instagram</h1>
+        <h1>康斯特學園</h1>
+        <h2>演員Instagram</h2>
     </div>
     <div class="container">
         <div class="profile-card">
@@ -193,6 +199,17 @@
             <a href="https://www.instagram.com/zzhang_1025/" target="_blank">
                 <img src="https://imgur.com/T9ZkrO1.jpg" alt="zzhang_1025">
                 @zzhang_1025
+            </a>
+        </div>
+    </div>
+    <div class="header">
+        <h2>The real wizard made everythin came ture</h2>
+    </div>
+    <div class="container">
+        <div class="profile-card">
+            <a href="https://www.instagram.com/anitayang780402/" target="_blank">
+                <img src="https://imgur.com/VtSj6zN" alt="anitayang780402">
+                @anitayang780402
             </a>
         </div>
     </div>
