--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
             font-size: 2em;
             font-weight: 700;
         }
+        .header h3 {
+            margin: 0;
+            font-size: 1em;
+            font-weight: 700;
+        }
+        .header h4 {
+            margin: 0;
+            font-size: 0.5em;
+            font-weight: 700;
+        }
         .container {
             display: flex;
             flex-wrap: wrap;
@@ -91,6 +101,7 @@
     <div class="header">
         <h1>康斯特學園</h1>
         <h2>演員Instagram</h2>
+        <h4>(排序依照字母順序)</h4>
     </div>
     <div class="container">
         <div class="profile-card">
@@ -203,7 +214,7 @@
         </div>
     </div>
     <div class="header">
-        <h2>The real wizard made everythin came ture</h2>
+        <h2>The real wizard made everything come true</h2>
     </div>
     <div class="container">
         <div class="profile-card">
