--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>康斯特學園_演員Instagram</title>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Noto Sans TC', sans-serif; /* 使用Noto Sans Traditional Chinese字體 */
@@ -214,12 +214,12 @@
         </div>
     </div>
     <div class="header">
-        <h2>The real wizard made everything come true</h2>
+        <h2 style="font-family: 'Dancing Script';">The real wizard who made everything come true</h2>
     </div>
     <div class="container">
         <div class="profile-card">
             <a href="https://www.instagram.com/anitayang780402/" target="_blank">
-                <img src="https://imgur.com/VtSj6zN" alt="anitayang780402">
+                <img src="https://i.imgur.com/VtSj6zN.jpeg" alt="anitayang780402">
                 @anitayang780402
             </a>
         </div>
