--- a/index.html
+++ b/index.html
@@ -213,6 +213,9 @@
             </a>
         </div>
     </div>
+
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
     <div class="header">
         <h2 style="font-family: 'Dancing Script';">The real wizard who made everything come true</h2>
     </div>
