--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
             </a>
         </div>
         <div class="profile-card">
-            <a href="https://www.instagram.com/minnnp_w/" target="_blank">
-                <img src="https://imgur.com/7Cmehf8.jpg" alt="minnnp_w">
-                @minnnp_w
+            <a href="https://www.instagram.com/minnnp1235/" target="_blank">
+                <img src="https://i.imgur.com/bdCSX3D.jpeg" alt="minnnp1235">
+                @minnnp1235
             </a>
         </div>
         <div class="profile-card">
@@ -191,7 +191,7 @@
         <div class="profile-card">
             <a href="https://www.instagram.com/white_yanjun/" target="_blank">
                 <img src="https://imgur.com/XJmEMNY.jpg" alt="white_yanjun">
-                @white_yanjun
+                @white_ymi
             </a>
         </div>
         <div class="profile-card">
